# advent-of-code

./: .gitignore  LICENSE  README.md  justfile  noxfile.py  pyproject.toml  setup.cfg
2015/: day01.py  day01_2.py  day02.py  day02_2.py  day03.py  day03_2.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
2016/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
2017/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day1.py  day10.py  day10_2.py  day11.py  day11_2.py  day12.py  day12_2.py  day13.py  day13_2.py  day14.py  day14_2.py  day15.py  day16.py  day16_2.py  day17.py  day18.py  day18_2.py  day19.py  day19_2.py  day1_2.py  day2.py  day20.py  day20_2.py  day21.py  day21_2.py  day22.py  day22_2.py  day23.py  day23_2.py  day24.py  day24_2.py  (+16 more)
2018/: day01.py  day01_2.py  day02.py  day02_2.py  day03.py  day03_2.py  day04.py  day04_2.py  day05.py  day05_2.py  day06.py  day06_2.py  day07.py  day07_2.py  day08.py  day08_2.py  day09.py  day09_2.py  day10.py  day10_2.py  day11.py  day11_2.py  day12.py  day12_2.py  day13.py  day13_2.py  day14.py  day14_2.py  day15.py  day16.py  day16_2.py  day17.py  day18.py  day19.py  day20.py  day21.py  day21alt.py  day22.py  day23.py
2019/: day01.py  day01_2.py  day02.py  day02_2.py  day03.py  day03_2.py  day04.py  day04_2.py  day05.py  day06.py  day06_2.py  intcode.py
2020/: day01.py  day01_2.py  day02.py  day02_2.py  day03.py  day03_2.py  day04.py  day04_2.py  day05.py  day05_2.py  day06.py  day06_2.py  day07.py  day07_2.py  day08.py  day08_2.py  day09.py  day09_2.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
2021/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
2022/: day01.py  day02.py  day03.py  day04.py  day05.py  (+20 more)
(+104 files in other folders)
