
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]

[tool.black]
target-version = ["py310"]
line-length = 79

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 79
multi_line_output = 3
use_parentheses = true
