[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "advent-of-code"
version = "0.1.0"
authors = [{ name = "tcbegley", email = "tomcbegley@gmail.com" }]
description = "Helper library for scaffolding my Advent of Code solutions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["aocd>=0.1", "ruff>=0.14.7", "typer>=0.13.1"]

[dependency-groups]
dev = ["ipdb>=0.13.13", "ipython>=8.27.0", "pyright>=1.1.381", "ruff>=0.6.5"]

[project.urls]
"Source code" = "https://github.com/tcbegley/advent-of-code"

[project.scripts]
ac = "advent_of_code:app"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    # pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
]
