[metadata]
name=aoc
description=Helper functions for getting data / boilerplate code
license=MIT
author=tcbegley
author_email=tomcbegley@gmail.com
url=https://github.com/tcbegley/advent-of-code

[options]
package_dir=
    =src
packages=find:
install_requires=
    advent-of-code-data>=0.3
    typer[all]

[options.entry_points]
console_scripts=
    lets-go=aoc:app

[options.packages.find]
where=src
